# meson-plus-plus

./: .clang-format  .clang-tidy  .editorconfig  CONTRIBUTING.md  README.md  design.md  meson.build  meson_options.txt  run-tests.sh
.github/workflows/: codeql-analysis.yml  main.yml  ubuntu.yml
src/: main.cpp  meson.build  options.cpp  options.hpp  version.hpp.in
src/backends/: backend_tests.cpp  meson.build
src/backends/common/: backend.cpp  backend.hpp
src/backends/fir/: fir.hpp  mir_to_fir.cpp
src/backends/ninja/: entry.hpp  meson.build  ninja.cpp
src/frontend/: driver.cpp  driver.hpp  interpreter.l  interpreter.ypp  lexer.l  meson.build  node.cpp  node.hpp  node_visitors.cpp  node_visitors.hpp  parser.yy  parser_test.cpp  scanner.hpp  standalone.cpp  standalone_parser.cpp  subdir_visitor.cpp
src/hir/: arguments.hpp  ast_to_hir.cpp  ast_to_hir.hpp  ast_to_hir_test.cpp  hir.cpp  hir.hpp  machines.cpp  machines.hpp  meson.build  passes.cpp  passes.hpp  passes_test.cpp
src/hir/ast_to_hir/: functions.cpp  functions.hpp  lower.hpp
src/hir/state/: state.hpp
src/hir/targets/: target.hpp
src/hir/toolchains/: archiver.hpp  common.cpp  common.hpp  compiler.hpp  detect_archivers.cpp  detect_archivers_test.cpp  detect_compilers.cpp  detect_compilers_test.cpp  detect_linkers.cpp  detect_linkers_test.cpp  linker.hpp  toolchain.cpp  toolchain.hpp
src/hir/toolchains/archivers/: gnu.cpp  gnu.hpp
src/hir/toolchains/compilers/cpp/: clang.cpp  cpp.hpp  gnu.cpp  gnu.hpp
src/hir/toolchains/linker_drivers/: gnu.cpp  gnu.hpp
src/hir/toolchains/linkers/: gnu.cpp  gnu.hpp
src/ir/: ast_to_ir.cpp  ast_to_ir.hpp  ast_to_ir_test.cpp  ir.hpp  meson.build
src/meson/: arguments.hpp  machines.cpp  machines.hpp  meson.build
src/meson/state/: state.hpp
src/meson/targets/: target.hpp
src/meson/toolchains/: archiver.hpp  common.cpp  common.hpp  compiler.hpp  detect_archivers.cpp  detect_archivers_test.cpp  detect_compilers.cpp  detect_compilers_test.cpp  detect_linkers.cpp  detect_linkers_test.cpp  linker.hpp  toolchain.cpp  toolchain.hpp
src/meson/toolchains/archivers/: gnu.cpp
src/meson/toolchains/compilers/cpp/: clang.cpp  cpp.hpp  gnu.cpp
src/meson/toolchains/linker_drivers/: gnu.cpp
src/meson/toolchains/linkers/: gnu.cpp
src/mir/: ast_to_mir.cpp  ast_to_mir.hpp  ast_to_mir_test.cpp  functions.xml  generate_function_arguments.py  lower.cpp  lower.hpp  meson.build  mir.cpp  mir.hpp  mir_tests.cpp  passes.cpp  passes.hpp  passes_test.cpp
src/mir/meson/: arguments.cpp  arguments.hpp  machines.cpp  machines.hpp  meson.build  meson_tests.cpp  object_tests.cpp  objects.cpp  objects.hpp  pkgconf.cpp  pkgconf.hpp  version.cpp  version.hpp
src/mir/meson/objects/: file.cpp  include_directories.cpp
src/mir/meson/state/: state.cpp  state.hpp
src/mir/meson/targets/: target.hpp
src/mir/meson/toolchains/: archiver.hpp  common.cpp  common.hpp  compiler.hpp  detect_archivers.cpp  detect_archivers_test.cpp  detect_compilers.cpp  detect_compilers_test.cpp  detect_linkers.cpp  detect_linkers_test.cpp  linker.hpp  toolchain.cpp  toolchain.hpp
src/mir/meson/toolchains/archivers/: gnu.cpp
src/mir/meson/toolchains/compilers/cpp/: clang.cpp  cpp.hpp  gnu.cpp  gnulike.cpp
src/mir/meson/toolchains/linker_drivers/: gnu.cpp
src/mir/meson/toolchains/linkers/: gnu.cpp
src/mir/passes/: argument_extractors.hpp  combine_add_arguments.cpp  compilers.cpp  constant_folding.cpp  constant_propogation.cpp  custom_target_program_replacement.cpp  dead_code.cpp  dependency_objects.cpp  disabler.cpp  flatten.cpp  free_functions.cpp  insert_phis.cpp  join_blocks.cpp  machines.cpp  print.cpp  private.hpp  program_objects.cpp  pruning.cpp  string_objects.cpp  threaded.cpp  value_numbering.cpp  walkers.cpp
src/mir/passes/tests/: branch_pruning_test.cpp  const_folding_test.cpp  constant_propogation_test.cpp  custom_target_program_replacement_test.cpp  dead_code_test.cpp  disabler_test.cpp  fixup_phis_test.cpp  flatten_test.cpp  free_functions_test.cpp  insert_compiler_test.cpp  insert_phis_test.cpp  join_blocks_test.cpp  lower_test.cpp  machine_lower_test.cpp  passes_test.cpp  test_utils.cpp  test_utils.hpp  value_numbering_test.cpp  walker_tests.cpp
src/test/: test.cpp  test.hpp
src/tools/: test.cpp  test.hpp  vcs_tag.cpp  vcs_tag.hpp
src/util/: exceptions.hpp  log.cpp  log.hpp  meson.build  process.cpp  process.hpp  utils.cpp  utils.hpp  utils_test.cpp
subprojects/: libpkgconfpp.wrap  rpm-version.wrap  tiny-process-library.wrap
tests/: meson.build  runner.sh
tests/dependencies/01 pkg-config/: main.cpp  meson.build
tests/dsl/01 subdir/: meson.build
tests/dsl/01 subdir/elif sub2/: meson.build
tests/dsl/01 subdir/else/: meson.build
tests/dsl/02 trivial/: main.cpp  meson.build
tests/dsl/03 static library/: lib.cpp  meson.build
tests/dsl/04 link static and exe/: lib.cpp  lib.hpp  main.cpp  meson.build
tests/dsl/05 include_directories/: foo.cpp  main.cpp  meson.build
tests/dsl/06 messages/: meson.build
tests/dsl/07 find_program/: meson.build
tests/dsl/08 custom_target/: gen.py  main.cpp  meson.build
tests/dsl/09 string methods/: meson.build
tests/dsl/10 dependency methods/: meson.build
tests/dsl/11 test types/: main.cpp  meson.build
tests/dsl/12 add arguments/: main.cpp  meson.build
tests/dsl/13 vcs_tag/: basic.expected  basic.in  compare.py  fallback.expected  meson.build
tests/dsl/14 vcs_tag git/: compare.py  meson.build  setup.sh  teardown.sh
